[package]
name = "rabbitmq_adaptor"
version = "0.20.1"
edition = "2021"
publish = ["chronicled-platform-v2-public"]

[dependencies]
anyhow = { version = "1.0.71", registry = "crates-io" }
async-trait = { version = "0.1.68", registry = "crates-io" }
derivative = { version = "2.2.0", registry = "crates-io" }
enclose = { version = "1.1.8", registry = "crates-io" }
futures = { version = "0.3.28", features = ["compat"], registry = "crates-io" }
hex = { version = "0.4.3", registry = "crates-io" }
lapin = { version = "0.28.6-alpha", registry = "chronicled-platform-v2-public", features = [
  "futures",
] }
maplit = { version = "1.0.2", registry = "crates-io" }
opentelemetry = { version = "0.18.0", features = [
  "rt-tokio",
  "metrics",
], registry = "crates-io" }
serde = { version = "1.0.160", registry = "crates-io" }
tokio = { version = "1", features = ["full"], registry = "crates-io" }
tracing = { version = "0.1.37", registry = "crates-io", features = ["log"] }
tracing-futures = { version = "0.2.5", registry = "crates-io" }
tracing-opentelemetry = { version = "0.18.0", registry = "crates-io" }
uuid = { version = "1.3.2", features = ["v4"], registry = "crates-io" }

[dev-dependencies]
config = { version = "0.13.1", registry = "crates-io" }
env_logger = { version = "0.10.0", registry = "crates-io" }
rand = { version = "*", registry = "crates-io" }
test-log = { version = "0.2.11", registry = "crates-io", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
